--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraDirentrega_usuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraDirentrega_usuario.html
@@ -27,7 +27,7 @@
 			<hr>
 		</div>
 
-		<div>
+		<div th:fragment="fragDirentrega">
 			<form th:action="@{/grabarDirentrega_usuario}" th:object="${direntrega_usuario}" method="POST"
 				enctype="multipart/form-data">
 
