--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/comentario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/comentario.html
@@ -10,64 +10,75 @@
 	<div th:replace="../static/include/navbar"></div>
 
 	<div class="container bg-light vh-100">
-		
+
 		<div class="mt-4">
-			
+
 			<div>
 				<h2>COMENTARIOS DE LOS CLIENTES</h2>
 				<hr>
 			</div>
-			
-			<div  class="list-group overflow-y-auto" style="height:500px;" >
-				<div th:each="comentario : ${listaComentario}" class="list-group-item list-group-item-action" >
-					<div >
-						<div class="d-flex justify-content-between">
-							<p class ="fw-bold">
-								Usuario: <span th:text="${comentario.usuarioCliente.nomUsuario}"></span>
-								<img src="https://images.emojiterra.com/google/android-12l/512px/2b50.png" width="30px" height="30px">
-								<span th:text="${comentario.cantEstrellaComentario}" />
-								Estrellas calificadas
 
-							</p>
-							<p th:text="${comentario.fecharegComentario}"></p>
-							
+			<div th:fragment="fragComentarios" th:if="${session.listaComentario}!=null">
+				<div class="list-group overflow-y-auto" style="height:500px;">
+					<div th:each="comentario : ${session.listaComentario}" class="list-group-item list-group-item-action">
+						<div class="d-flex justify-content-between">
+							<div>
+								<div class="fw-bold">
+									Usuario: <span th:text="${comentario.usuarioCliente.nomUsuario}"></span>
+								</div>
+
+								<div class="fw-bold">
+									<img src="https://images.emojiterra.com/google/android-12l/512px/2b50.png"
+										width="20px" height="20px">
+									<span th:text="${comentario.cantEstrellaComentario}" />
+									Estrellas calificadas
+								</div>
+							</div>
+							<div>
+								<p th:text="${comentario.fecharegComentario}"></p>
+							</div>
 						</div>
-					
-						<div>
+
+						<div class="mt-3">
 							<i th:text="${comentario.desComentario}"></i>
 						</div>
 					</div>
-					
-							
 				</div>
-			</div>
-			
-			<div class="mt-4">
-				<form th:action="@{/grabarComentario}" th:object="${comentario}" method="post">
-					<div class="row g-4">
-						<div class="col-12 d-flex gap-2">
-							<img th:if="${session.usuario}!=null" class="rounded-circle"
-								th:src="@{'data:image;base64,' + ${session.imagen}}" width="60px"
-								heigth="60px">
-							<textarea class="form form-control" th:field="*{desComentario}" ></textarea>
-						</div>
-						
-						
-						<div class="col-4 col-lg-2 d-flex align-items-center gap-3">
-							<input type="number" class="form-control" min="1" max="5" required th:field="*{cantEstrellaComentario}" />
-							<img src="https://images.emojiterra.com/google/android-12l/512px/2b50.png" width="30px" height="30px">
-						</div>
+
+				<div th:if="${comentario}" class="mt-4">
+					<form th:action="@{/grabarComentario}" th:object="${comentario}" method="post">
+						<div class="row g-4">
+
+							<div class="col-12 d-flex gap-2">
+								<img th:if="${session.usuario}!=null" class="rounded-circle"
+									th:src="@{'data:image;base64,' + ${session.imagen}}" width="60px" heigth="60px">
+								<textarea class="form form-control" th:field="*{desComentario}"></textarea>
+							</div>
 							
-						
-						<div class="col-4">
-							<button class="btn btn-success">PUBLICAR</button>
+							<div clas="col">
+								<div class="row row-cols-auto">
+									<div class="d-flex gap-2">
+										<input type="number" class="form-control" min="1" max="5" required
+											th:field="*{cantEstrellaComentario}" />
+										<img src="https://images.emojiterra.com/google/android-12l/512px/2b50.png"
+											width="30px" height="30px">
+									</div>
+
+									<div>
+										<button class="btn btn-success">PUBLICAR</button>
+									</div>
+								</div>
+							</div>
 						</div>
-					</div>
-				</form>
+					</form>
+				</div>
+				
 			</div>
-			
+
+
+
 		</div>
-		
+
 	</div>
 
 </body>
