--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaDirentrega_usuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaDirentrega_usuario.html
@@ -18,9 +18,8 @@
 		</div>
 
 		<div class="my-4">
-			<a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#gestionarUsuario"
+			<a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#gestionarDirentrega"
 				href="">NUEVA DIRECCION DE ENTREGA</a>
-			<a class="btn btn-success" th:href="@{nuevoDirentrega_usuario}">NUEVO DIRECCION DE ENTREGA</a>
 		</div>
 		
 		<div th:if="${session.usuario}!=null" class="row row-cols-auto mb-4">
@@ -38,18 +37,16 @@
 			<table class="table table-bordered">
 				<thead>
 					<tr>
-						<th>USUARIO</th>
-						<th>ID DIRECCION</th>
-						<th>DISTRITO</th>
-						<th>DIRECCION</th>
-						<th>FECHA</th>
-						<th>ESTADO</th>
-						<th>ACCIONES</th>
+						<th class="col-1">#</th>
+						<th class="col-1">DISTRITO</th>
+						<th class="col-5">DIRECCION</th>
+						<th class="col-1">FECHA</th>
+						<th class="col-1">ESTADO</th>
+						<th class="col-2">ACCIONES</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="direntrega_usuario : ${listaDirentrega_usuario}">
-						<td th:text="${direntrega_usuario.usuario.nomUsuario}"></td>
 						<td th:text="${direntrega_usuario.idDirentrega}"></td>
 						<td th:text="${direntrega_usuario.distrito.desDistrito}"></td>
 						<td th:text="${direntrega_usuario.desDirentrega}"></td>
@@ -57,7 +54,13 @@
 						<td th:text="${direntrega_usuario.estadoDirentrega}"></td>
 						<td>
 							<a th:href="@{/actualizarDirentrega_usuario/{id}(id=${direntrega_usuario.idDirentrega})}"
-								class="btn btn-primary">EDITAR</a>
+								class="btn">
+								<img src="https://cdn-icons-png.flaticon.com/512/1160/1160515.png" width="30px" height="30px"/>	
+							</a> 
+							<a th:href="@{/anularDirentrega_usuario/{id}(id=${direntrega_usuario.idDirentrega})}"
+								class="btn">
+								<img src="https://cdn-icons-png.flaticon.com/512/216/216760.png" width="30px" height="30px" />	
+							</a>
 						</td>
 					</tr>
 				</tbody>
@@ -68,96 +71,17 @@
 
 	<!-- INICIAMOS EL MODAL PARA TRATADO DE DATOS -->
 
-	<div class="modal fade modal-lg" id="gestionarUsuario" data-bs-backdrop="static">
+	<div class="modal fade modal-lg" id="gestionarDirentrega" data-bs-backdrop="static">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header text-bg-danger">
-					<h2 class="modal-title fs-5">USUARIO</h2>
+					<h2 class="modal-title fs-5">DIRECCIONES DE ENTREGA</h2>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<div>
-						<form th:action="@{grabarUsuario}" th:object="${usuario}" method="post">
-
-							<div class="d-flex flex-column gap-3">
-								<div class="row row-cols-3 ">
-									<div>
-										<label>ID</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>FECHA REG</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>ESTADO</label>
-										<input class="form-control" type="text" />
-									</div>
-								</div>
-
-								<div class="row row-cols-2 g-2">
-
-									<div>
-										<label>NOMBRE</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>APELLIDO</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>TIPO</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>TELEFONO</label>
-										<input class="form-control" type="tel" />
-									</div>
-									<div>
-										<label>CELULAR</label>
-										<input class="form-control" type="tel" />
-									</div>
-									<div>
-										<label>DISTRITO</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>DIRECCION</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>DNI</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>EMAIL</label>
-										<input class="form-control" type="email" />
-									</div>
-									<div>
-										<label>PASSWORD</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>IMAGEN</label>
-										<input class="form-control" type="file" />
-									</div>
-									<div>
-										<label>ESTADO</label>
-										<input class="form-control" type="text" />
-									</div>
-								</div>
-
-								<div class="modal-footer">
-									<div>
-										<button type=submit class="btn btn-success">GRABAR</button>
-									</div>
-								</div>
-
-							</div>
-
-
-						</form>
-					</div>
+					
+					<div th:insert="registraDirentrega_usuario::fragDirentrega"></div>
+					
 				</div>
 			</div>
 		</div>
