--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraPedido.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraPedido.html
@@ -15,7 +15,7 @@
 				<hr>
 			</div>
 			
-			<div>	
+			<div th:fragment="fragGestionPedido">	
 				<div>
 					<form action="guardarPedido" th:object="${pedido}" method="post">
 						<div class="d-flex flex-column gap-4">
