--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
@@ -40,7 +40,10 @@
 										</h4>
 								</div>
 								<div class="card-img-top">
-									<img src="https://laopinion.com/wp-content/uploads/sites/3/2019/04/p2.jpg?quality=80&strip=all"
+									<img th:if="${producto.imagenProducto}" th:src="@{'data:image;base64,' + ${Base64.encodeAsString(producto.imagenProducto)}}" 
+										width="100%" height="200px"/>
+									
+									<img th:if="!${producto.imagenProducto}" src="https://laopinion.com/wp-content/uploads/sites/3/2019/04/p2.jpg?quality=80&strip=all"
 										width="100%" height="200px" />
 								</div>
 								<div class="card-body ">
