falta hacer la compra

--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/carroCompra.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/carroCompra.html
@@ -16,7 +16,8 @@
 			<hr>
 		</div>
 
-		<table th:if="${session.carrito}" class="table table-hover table-sm">
+		<div>
+			<table th:if="${session.carrito}" class="table table-hover table-sm">
 			<thead>
 				<tr>
 					<th>IMAGEN</th>
@@ -51,6 +52,7 @@
 			</tfoot>
 
 		</table>
+		</div>
 
 		<div th:if="${session.carrito.size}>0" class="mt-4">
 			<a href="/nuevoPedido" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#gestionarPedido">GENERAR PEDIDO</a>
