--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaPedido.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaPedido.html
@@ -17,8 +17,8 @@
 			<hr>
 		</div>
 
-		<div class="card table-responsive overflow-y-auto" style="height:600px;">
-			<table class="table ">
+		<div class="table-responsive overflow-y-auto border" style="height:600px;">
+			<table class="table table-hover">
 				<thead>
 					<tr>
 						<th>ID</th>
