--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaColaborador.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaColaborador.html
@@ -11,7 +11,7 @@
 
 	<div th:replace="../static/include/navbar"></div>
 
-	<div class="container pt-3 bg-light vh-100 ">
+	<div class="container pt-3 bg-light">
 		<div>
 			<h2>LISTA DE COLABORADORES</h2>
 		</div>
@@ -21,7 +21,7 @@
 				href="">NUEVO COLABORADOR</a>
 		</div>
 
-		<div class="card table-responsive">
+		<div class="table-responsive border" style="height: 600px;">
 			<table class="table table-bordered">
 				<thead>
 					<tr>
