--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -42,6 +42,9 @@
 				<a class="nav-link" th:href="@{/listaPedido}">PEDIDO</a>
 			</li>
 			<li class="nav-item">
+				<a class="nav-link" th:href="@{/listaCompra}">COMPRAS</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" href="/comentario" data-bs-toggle="offcanvas" data-bs-target="#comentarios">COMENTARIOS</a>
 			</li>
 			
